syntax = "proto3";

option csharp_namespace = "TenSharedLibraryPractice.Protos";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {}

message HelloReply {
  string message = 1;
}
